objects/CRM_Search_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>CRM_AdditionalZipCodes__c</fullName>
        <label>Additional ZIP codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Search Criterias</relationshipLabel>
        <relationshipName>Search_Criterias_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_ExcludedZipCodes__c</fullName>
        <label>Excluded ZIP Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Search_Criteria_Level_1__c</fullName>
        <label>Search Criteria Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Region</fullName>
                </value>
                <value>
                    <fullName>By Market</fullName>
                </value>
                <value>
                    <fullName>By Hospital</fullName>
                </value>
                <value>
                    <fullName>By State</fullName>
                </value>
                <value>
                    <fullName>By County</fullName>
                </value>
                <value>
                    <fullName>By CBSA</fullName>
                </value>
                <value>
                    <fullName>By Distance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_Search_Criteria_Level_2__c</fullName>
        <label>Search Criteria Level 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Search_Criteria_Level_3__c</fullName>
        <label>Search Criteria Level 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Search Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_2__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CRM_AdditionalZipCodes__c</columns>
        <columns>CRM_ExcludedZipCodes__c</columns>
        <columns>CRM_Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CBSA</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By CBSA</value>
        </filters>
        <label>CBSA</label>
    </listViews>
    <listViews>
        <fullName>County</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By County</value>
        </filters>
        <label>County</label>
    </listViews>
    <listViews>
        <fullName>Distance</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By Distance</value>
        </filters>
        <label>Distance</label>
    </listViews>
    <listViews>
        <fullName>Market</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_2__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By Market</value>
        </filters>
        <label>Market</label>
    </listViews>
    <listViews>
        <fullName>Region</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_2__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By Region</value>
        </filters>
        <label>Region</label>
    </listViews>
    <listViews>
        <fullName>Service_Area</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_2__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By Service Area</value>
        </filters>
        <label>Service Area</label>
    </listViews>
    <listViews>
        <fullName>State</fullName>
        <columns>NAME</columns>
        <columns>CRM_Search_Criteria_Level_1__c</columns>
        <columns>CRM_Search_Criteria_Level_3__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Search_Criteria_Level_1__c</field>
            <operation>equals</operation>
            <value>By State</value>
        </filters>
        <label>State</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Criterias</pluralLabel>
    <recordTypes>
        <fullName>Region</fullName>
        <active>true</active>
        <label>Region</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>